// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageView Component should have fallback conditions for all props: fallback display 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <EmptyState
    className="fadein"
    variant="full"
  />
</PageLayout>
`;

exports[`MessageView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader>
    lorem
  </PageHeader>
  <EmptyState
    className="fadein"
    variant="full"
  >
    <EmptyStateIcon
      icon={[Function]}
    />
    <EmptyStateBody>
      ipsum
    </EmptyStateBody>
  </EmptyState>
</PageLayout>
`;
